        
    (b) If the match point in a subject started with modifier character, and 
        there was no match, the code could incorrectly back up beyond the match 
        point, and potentially beyond the first character in the subject, 
        leading to a segfault or an incorrect match result.
        
10. A conditional group with an assertion condition could lead to PCRE 
    recording an incorrect first data item for a match if no other firse data 
    item was recorded. For example, the pattern (?(?=ab)ab) recorded "a" as a
    first data item, and therefore matched "ca" after "c" instead of at the 
    start.
    
11. Change 40 for 8.33 (allowing pcregrep to find empty strings) showed up a 
    bug that caused the command "echo a | ./pcregrep -M '|a'" to loop.
    
12. The source of pcregrep now includes z/OS-specific code so that it can be
    compiled for z/OS as part of the special z/OS distribution.


Version 8.33 28-May-2013
------------------------

1.  Added 'U' to some constants that are compared to unsigned integers, to
    avoid compiler signed/unsigned warnings. Added (int) casts to unsigned
    variables that are added to signed variables, to ensure the result is
    signed and can be negated.

2.  Applied patch by Daniel Richard G for quashing MSVC warnings to the
    CMake config files.

3.  Revise the creation of config.h.generic so that all boolean macros are
    #undefined, whereas non-boolean macros are #ifndef/#endif-ed. This makes
    overriding via -D on the command line possible.

4.  Changing the definition of the variable "op" in pcre_exec.c from pcre_uchar
    to unsigned int is reported to make a quite noticeable speed difference in
    a specific Windows environment. Testing on Linux did also appear to show
    some benefit (and it is clearly not harmful). Also fixed the definition of
    Xop which should be unsigned.

5.  Related to (4), changing the definition of the intermediate variable cc